# finanzas-backend

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.bat
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2026_06_06_0001_add_password_version_and_completed_modules.py  2026_06_09_0001_add_transaction_compound_indexes.py  2026_06_13_0001_add_totp_2fa.py  2026_06_22_0001_add_phone_and_sms_preferences.py  2026_06_22_0001_add_phone_number.py  add_admin_logs_and_config.py  add_completed_courses.py  add_db_indexes.py  add_world_markets.py  fix_cache_value_type.py  initial_schema.py
app/: main.py
app/core/: api_keys.py  config.py  exceptions.py  rate_limiter.py  redis_client.py  security.py
app/db/: init.py  session.py
app/models/: base.py
app/repositories/: leaderboard_repository.py  portfolio_repository.py  user_repository.py
app/schemas/: portfolio.py  stock.py  user.py
app/services/: auth_service.py  cache_service.py  email_service.py  exchange_rate_service.py  finnhub_service.py  international_stocks_service.py  news_service.py  pdf_report_service.py  pdf_signature_service.py  redis_2fa_service.py  sms_service.py  totp_service.py  (+1 more)
scripts/: make_admin.py
tests/: conftest.py  test_api.py  test_cache_service.py  test_email_service.py  test_exceptions.py  test_exchange_rate_service.py  test_news_service.py  test_pdf_report_service.py  test_pdf_signature_service.py  test_redis_2fa_service.py  test_redis_cache.py
(+33 files in other folders)
